# threadsafevariable

./: Makefile  README.md  pyproject.toml  setup.py
tests/: test_tsv.py
threadsafevariable/: __init__.py
