[project]
name = "threadsafevariable"
version = "20230507.1"
authors = [{ name="Massimo Di Pierro", email="massimo.dipierro@gmail.com" },]
description = "Please read the README"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: BSD License",
      "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/web2py/yatl"
"Bug Tracker" = "https://github.com/web2py/yatl/issues"
